--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 /* Global Styles */
 body {
-    margin: 0;
+    margin: 110;
     padding: 0;
     font-family: "Libel Suit", sans-serif;
+}
+
+
+.main-content {
+    margin-top: 80px; /* Adjust this value to match the height of your navbar */
 }
 
 @font-face {
